<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <TextView
        android:id="@+id/TextView01"
         android:layout_width="fill_parent"
                android:layout_height="30dp"
        android:text="@string/413Bus Timing 60"
        android:textStyle="bold"
        android:gravity="center"
           android:textColor="#FFBF00"/>
     
        <TextView
        android:id="@+id/TextView01"
         android:layout_width="fill_parent"
                android:layout_height="30dp"
        android:text="@string/cdBus413 route"
        android:textStyle="bold"
        android:gravity="center"
           android:textColor="#FFBF00"/>
         
         
         <View 
         android:layout_height="10dp"
         android:layout_width="fill_parent"
		android:background="#424242"/>
    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/413dfirst" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/413cdfirst"
           android:textColor="#FFBF00"/>

             <View 
         android:layout_height="1dp"
         android:layout_width="fill_parent"
		android:background="#424242"/>
             
               <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/413change" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TextView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/413timechange"
           android:textColor="#FFBF00" />
             
             
    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/413mid"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/413middle"
           android:textColor="#FFBF00" />

             <View 
         android:layout_height="1dp"
         android:layout_width="fill_parent"
		android:background="#424242"/>

  
             <View 
         android:layout_height="1dp"
         android:layout_width="fill_parent"
		android:background="#424242"/>
             
    <TextView
        android:id="@+id/TextView08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cdlast"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView09"
         android:layout_width="fill_parent"
                android:layout_height="30dp"
        android:text="@string/413lastlast"
           android:textColor="#FFBF00" />
    
             <View 
         android:layout_height="1dp"
         android:layout_width="fill_parent"
		android:background="#424242"/>
    
            <TextView
        android:id="@+id/TextView10"
         android:layout_width="fill_parent"
                android:layout_height="45dp"
        android:text="@string/413Sat"
        android:textStyle="bold" />
            
                     <View 
         android:layout_height="1dp"
         android:layout_width="fill_parent"
		android:background="#424242"/>
    
<!--       <TextView -->
<!--         android:id="@+id/TextView10" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/cdSun" -->
<!--         android:textStyle="bold" /> -->
      
        <ImageView 
    android:id="@+id/map"
    android:src="@drawable/citydirectmap"
      android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    
      android:clickable="true"  
    android:onClick="handlemaplarge"  
/>
    

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableLayout>


</LinearLayout>